@@ -1,3 +1,14 @@
+2020-08-22  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	balsa-index: scroll to row in another idle handler
+
+	* src/balsa-index.c
+	  (bndx_scroll_to_row_idle): the handler;
+	  (bndx_scroll_to_row): helper to schedule it;
+	  (bndx_scroll_on_open_idle), (bndx_select_row), (bndx_ensure_visible_idle):
+	    use the helper;
+	  (bndx_destroy): remove the source, if necessary.
+
 2020-08-21  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	balsa-index: Ensure visible in a low-priority idle callback
